# linux-collection

./: .gitignore  Agents.md  README.md  galaxy.yml  pyproject.toml  requirements.txt  requirements.yml
.github/workflows/: molecule.yml  release.yml
extensions/molecule/: requirements.txt
extensions/molecule/audit/: cleanup.yml  converge.yml  molecule.yml
extensions/molecule/bash_profile/: converge.yml  molecule.yml  prepare.yml  requirements.yml
extensions/molecule/common/: Dockerfile-systemd.j2  Dockerfile.j2
extensions/molecule/nginx/: converge.yml  molecule.yml  requirements.yml
extensions/molecule/package_updates/: converge.yml  molecule.yml
extensions/molecule/prepare/: converge.yml  molecule.yml  prepare.yml
extensions/molecule/security/: converge.yml  molecule.yml  prepare.yml
playbooks/: linux_playbook.yml
plugins/: README.md
roles/audit/: README.md
roles/audit/defaults/: main.yml
roles/audit/meta/: main.yml
roles/audit/tasks/: audit.yml  kvrt.yml  lynis.yml  main.yml  openscap.yml
roles/audit/vars/: main.yml
roles/bash_profile/: README.md
roles/bash_profile/defaults/: main.yml
roles/bash_profile/meta/: main.yml
roles/bash_profile/tasks/: bash-profile-debian.yml  bash-profile-redhat.yml  bash-profile.yml  main.yml
roles/bash_profile/templates/: on-login-message.sh.j2
roles/bash_profile/tests/: test.yml
roles/bash_profile/vars/: main.yml
roles/docker/: README.md
roles/monitoring/: README.md
roles/nginx/: README.md
roles/package_updates/: README.md
roles/prepare/: README.md
roles/security/: README.md
(+86 files in other folders)
