[project]
name = "pgalonza-linux"
version = "1.0.0"
description = "Ansible collection for Linux customization"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13.7.0,<14",
]

[dependency-groups]
dev = [
    "molecule>=26.4,<27",
    "molecule-plugins[docker]>=25.8,<26",
    "pytest>=9,<10",
    "pytest-testinfra>=10,<11",
    "docker>=7,<8",
]